--- a/Thesis report/examplethesis.tex
+++ b/Thesis report/examplethesis.tex
@@ -634,7 +634,7 @@ Däremot var det en väldigt stor del av deltagarna som tyckte att begränsninga
 
 Dessa tre begränsningar kunde vara viktiga i UX-designprocessen eftersom de styrde utseendet av användargränssnittet och därmed även användarupplevelsen. På grund av dessa begränsningar kunde slutsatsen att Kibana försämrade produktens helhetsintryck dras. Om dessa begränsningar skulle åtgärdas skulle Kibana anses som ett bättre verktyg för UX-designers eftersom de skulle få sin frihet för visualisering som de ansågs saknades. Ytterligare något som deltagarna tyckte var en positiv egenskap i Kibana var möjligheten att inkludera en \textit{dashboard} i en webbsida med hjälp av HTML. Detta var något som skulle kunna lösa problemen med Kibanas begränsningar. Eftersom Kibana var ett open-sourceprojektsom ständigt utvecklades fanns den potential och en stor möjlighet för mer utveckling och förbättringar.
 
-Deltagarnas åsikter angående uppdateringsfrekvensen som Kibana erbjöd var splittrade. Den högsta uppdateringsfrekvensen som fanns tillgänglig i Kibana var fem sekunder. Detta kunde betraktas som en dålig egenskap eftersom strömmande data med en uppdateringsfrekvens på varje millisekund inte skulle kunna visualiseras så fort ny data fanns tillgänglig. Detta problem hade kunnat bli åtgärdat om Kibana skapade en egenskap som automatiskt justerade uppdateringsfrekvensen baserat på hastigheten som data strömmar in. Däremot hade detta inte varit ett problem alls om dataströmmen har fem sekunder som uppdateringsfrekvens eller lägre. Därav skulle det rekommenderas att välja en sådan dataström vid användning av Kibana. 
+Deltagarnas åsikter angående uppdateringsfrekvensen som Kibana erbjöd var splittrade. \textit{Dashboards} i Kibana kunde som snabbast uppdateras var femte sekund. Detta kunde betraktas som en dålig egenskap eftersom strömmande data med en uppdateringsfrekvens på varje millisekund inte skulle kunna visualiseras så fort ny data fanns tillgänglig. Detta problem hade kunnat bli åtgärdat om Kibana skapade en egenskap som automatiskt justerade uppdateringsfrekvensen baserat på hastigheten som data strömmar in. Däremot hade detta inte varit ett problem alls om dataströmmen uppdaterades var femte sekund eller långsammare. Därav skulle det rekommenderas att välja en sådan dataström vid användning av Kibana. 
 
 Deltagarna i utvärderingen betraktade det som väldigt positivt att Kibana hade en intuitiv utvecklingsmiljö och att det var lätt för andra UX-designers eller utvecklare att förstå hur verktyget skulle användas. Detta var en bra egenskap eftersom arbetsprocessen i projekt effektiviserades om verktygen som användes var lätta att sätta sig in i och använda sig av. 
 
