--- a/Thesis report/examplethesis.tex
+++ b/Thesis report/examplethesis.tex
@@ -100,7 +100,7 @@ To investigate these difficulties, a design process for UX was created to be use
 \end{abstract}
 
 \chapter*{Förord}
-Detta projekt är ett resultat av ett examensarbete inom datateknik på Kungliga Tekniska Högskolan, på uppdrag av företaget ÅF Digital Solutions AB. Arbetet har utförts av Christina Ntis och Neira Čaušević på heltid under perioden mars 2018 - juni 2018.
+Detta projekt är ett resultat av ett examensarbete inom datateknik på Kungliga Tekniska Högskolan, på uppdrag av företaget ÅF Digital Solutions AB. Arbetet har utförts av Christina Ntis och Neira Causevic på heltid under perioden mars 2018 - juni 2018.
 
 Text som är i kursiv stil i denna rapport är termer på engelska som inte var lämpliga för översättning till svenska.
 
